# Software_Engineering

lab1/: README.md  lab1.dsl
lab2/: README.md  docker-compose.yml
lab2/auth_service/: openapi.json  pyproject.toml
lab2/auth_service/src/auth_service/: create_app.py  settings.py
lab2/auth_service/src/auth_service/api/v1/auth/: auth.py  models.py  views.py
lab2/project_service/: pyproject.toml
lab2/project_service/src/: __main__.py
lab2/project_service/src/project_service/: create_app.py  settings.py
lab2/project_service/src/project_service/api/v1/project/: core.py  views.py
lab3/: README.md  docker-compose.yml
lab3/auth_service/: pyproject.toml
lab3/auth_service/src/auth_service/: create_app.py
lab3/auth_service/src/auth_service/api/v1/auth/: auth.py  models.py  views.py
lab3/project_service/: openapi.json  pyproject.toml
lab3/project_service/src/project_service/: create_app.py  settings.py
lab3/project_service/src/project_service/api/v1/project/: auth.py  core.py  models.py  views.py
lab4/: README.md  docker-compose.yml
lab4/auth_service/: Dockerfile
lab4/auth_service/sql/: init_db.sql
lab4/auth_service/src/: __main__.py
lab4/auth_service/src/auth_service/: settings.py
lab4/auth_service/src/auth_service/api/v1/auth/: auth.py  models.py  views.py
lab4/project_service/: openapi.json  pyproject.toml
lab4/project_service/sql/: init_db.sql
lab4/project_service/src/project_service/: create_app.py  settings.py
lab4/project_service/src/project_service/api/v1/project/: core.py  models.py  views.py
