[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["silverfatt <silvestr.fat@mail.ru>"]
readme = "README.md"
packages = [{include = "auth_service"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
pydantic = "^2.10.6"
pydantic-settings = {extras = ["dotenv"], version = "^2.8.1"}
loguru = "^0.7.3"
passlib = "^1.7.4"
python-jose = "^3.4.0"
uvicorn = "^0.34.0"
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
